# Algorithm-Analysis

./: .gitignore  README.md  lab_5_max.rar  lab_5_old.rar
KOLYA_LABS/: LR2matr_3.txt  data.txt
KOLYA_LABS/DZ/: DZ-OI.graphml  DZ.graphml  dz-ii.graphml  dz1.tex
KOLYA_LABS/LR1/: L-D-R.graphml  Makefile  lab1-1.aux  lab1-1.dvi  lab1-1.tex  lab1-1.toc  lab1.dvi  lab1.tex  test_time.py  test_time.txt
KOLYA_LABS/LR2/: app.out  errors.c  errors.h  idef0.graphml  lab2.aux  lab2.toc  main.c  main.h  matr_10.txt  matrproc.c  optimized1.txt  standart.txt  standart1.txt  test.c  test.h  test_adiction_res.txt  v-o.graphml  vinograd.txt
KOLYA_LABS/LR3/: Makefile  bubble.graphml  errors.c  fileproc.h  filter.c  in_4.txt  lab3.aux  lab3.tex  main.c  main.h  menu.c  mysort.c  test.c  (+14 more)
dz/: code.txt
lab1/: compare_test.py  main.py  time_test.py
lab2/: asdf.py  c_time.c  compare_test.py  main.py  multiply.py  res_std0.txt  res_std1.txt  res_win0.txt  res_win1.txt  res_win_opt0.txt  res_win_opt1.txt  time_test.py
lab3/: main.py  sorts.py  time_test.py
lab4/: asdf.py
lab4/code/: CMakeLists.txt  controller.cpp  main.cpp  metering.cpp  mul_test.cpp  mult_matrix.cpp  mult_matrix.h  test.cpp
lab_1/: asdf.py  compare_test.py  compare_test.txt  distances.py  main.py  test.py  time_test.py  time_test.txt
lab_2/: multiply.py  time_test.py
lab_3/: sorts.py
lab_4/code/: CMakeLists.txt  main.cpp  mul_test.h  result.txt  time_test.cpp  time_test.h
lab_4_backup/code/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  mult_matrix.cpp  mult_matrix.h
lab_5/Code/: CMakeLists.txt  main.cpp
lab_5_old/: lab5_aa.tex  lab5_aa.toc
lab_6/egor_code/: CMakeLists.txt  aco.h  main.cpp  main_t.cpp  test.cpp  time.cpp  total_search.cpp
rk1/: algs.py  asdf.py  func.py  graph_1.txt  main.py  metro_graph.gv  metro_map.pdn  parser.py  parser_v2.py  test.txt
rk2/: asdf.py  automat.py  main.py
rk_1/: links.txt  mck.txt
rk_2/: text_1.txt
rk_2_fil/: asdf.py  automat.py  main.py  text_2.txt
(+511 files in other folders)
